--- a/index.html
+++ b/index.html
@@ -80,16 +80,29 @@
         .button:hover {
             background-color: #ffa500;
         }
-        .review-form {
+        .booking-form {
             display: none;
-            margin-top: 1rem;
-        }
-        .review {
             background: #222;
-            padding: 1rem;
+            padding: 2rem;
             border-radius: 8px;
-            margin-top: 1rem;
-            border: 1px solid #fff;
+            border: 2px solid #fff;
+            box-shadow: 0 3px 6px rgba(255, 255, 255, 0.2);
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 400px;
+            z-index: 1000;
+        }
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            z-index: 999;
         }
     </style>
     <script>
@@ -113,25 +126,14 @@
                 });
             });
 
-            document.getElementById('reviewButton').addEventListener('click', () => {
-                document.getElementById('reviewForm').style.display = 'block';
+            document.getElementById('bookNowButton').addEventListener('click', () => {
+                document.getElementById('bookingForm').style.display = 'block';
+                document.getElementById('overlay').style.display = 'block';
             });
-
-            document.getElementById('submitReview').addEventListener('click', () => {
-                const name = document.getElementById('reviewName').value;
-                const reviewText = document.getElementById('reviewText').value;
-
-                if (name && reviewText) {
-                    const reviewSection = document.getElementById('reviewsList');
-                    const review = document.createElement('div');
-                    review.classList.add('review');
-                    review.innerHTML = `<strong>${name}</strong><p>${reviewText}</p>`;
-                    reviewSection.appendChild(review);
-
-                    document.getElementById('reviewName').value = '';
-                    document.getElementById('reviewText').value = '';
-                    document.getElementById('reviewForm').style.display = 'none';
-                }
+            
+            document.getElementById('closeBooking').addEventListener('click', () => {
+                document.getElementById('bookingForm').style.display = 'none';
+                document.getElementById('overlay').style.display = 'none';
             });
         });
     </script>
@@ -147,17 +149,23 @@
         <a href="#reviews">Reviews</a>
         <a href="#legal">Legal</a>
     </nav>
-    <section id="reviews" class="active">
-        <h3>Reviews</h3>
-        <p>At ICONIC MOBILE DETAILS, we believe that reviews are the cornerstone of any successful business. Your opinion matters, and we strive to earn 5-star reviews from every customer we serve.</p>
-        <button id="reviewButton" class="button">Leave us a Review</button>
-        <div id="reviewForm" class="review-form">
-            <input type="text" id="reviewName" placeholder="Your Name" required>
-            <textarea id="reviewText" placeholder="Write your review here..." rows="4" required></textarea>
-            <button id="submitReview" class="button">Post Review</button>
-        </div>
-        <div id="reviewsList"></div>
+    <section id="services" class="active">
+        <h3>Our Services</h3>
+        <p>Select your service and book an appointment easily.</p>
+        <button id="bookNowButton" class="button">Book Now</button>
     </section>
+    <div class="overlay" id="overlay"></div>
+    <div class="booking-form" id="bookingForm">
+        <h3>Book an Appointment</h3>
+        <input type="text" id="name" placeholder="Full Name" required>
+        <input type="tel" id="phone" placeholder="Phone Number" required>
+        <input type="email" id="email" placeholder="Email Address" required>
+        <input type="text" id="car_details" placeholder="Car Make, Model, Year, Color" required>
+        <input type="date" id="date" required>
+        <input type="time" id="time" required>
+        <button type="submit" class="button">Submit Booking</button>
+        <button id="closeBooking" class="button">Close</button>
+    </div>
     <footer>
         <p>&copy; 2025 ICONIC MOBILE DETAILS. All Rights Reserved.</p>
         <p>Contact: (000) 000-0000 | email@example.com</p>
