--- a/index.html
+++ b/index.html
@@ -80,29 +80,19 @@
         .button:hover {
             background-color: #ffa500;
         }
-        .booking-form {
+        .review-form, .booking-form {
             display: none;
             background: #222;
-            padding: 2rem;
+            padding: 1rem;
             border-radius: 8px;
-            border: 2px solid #fff;
-            box-shadow: 0 3px 6px rgba(255, 255, 255, 0.2);
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 400px;
-            z-index: 1000;
+            margin-top: 1rem;
         }
-        .overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.7);
-            z-index: 999;
+        .review, .booking {
+            background: #222;
+            padding: 1rem;
+            border-radius: 8px;
+            margin-top: 1rem;
+            border: 1px solid #fff;
         }
     </style>
     <script>
@@ -113,27 +103,55 @@
             links.forEach(link => {
                 link.addEventListener('click', () => {
                     const targetId = link.getAttribute('href').replace('#', '');
-
                     sections.forEach(section => {
                         section.classList.remove('active');
                         if (section.id === targetId) {
                             section.classList.add('active');
                         }
                     });
-
                     links.forEach(l => l.classList.remove('active'));
                     link.classList.add('active');
                 });
             });
 
+            // Booking form functionality
             document.getElementById('bookNowButton').addEventListener('click', () => {
                 document.getElementById('bookingForm').style.display = 'block';
-                document.getElementById('overlay').style.display = 'block';
             });
-            
-            document.getElementById('closeBooking').addEventListener('click', () => {
-                document.getElementById('bookingForm').style.display = 'none';
-                document.getElementById('overlay').style.display = 'none';
+
+            document.getElementById('submitBooking').addEventListener('click', async () => {
+                const name = document.getElementById('bookingName').value;
+                const service = document.getElementById('bookingService').value;
+
+                if (name && service) {
+                    await fetch('https://your-backend.onrender.com/bookings', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({ name, service })
+                    });
+                    alert('Booking confirmed!');
+                    document.getElementById('bookingForm').style.display = 'none';
+                }
+            });
+
+            // Review form functionality
+            document.getElementById('reviewButton').addEventListener('click', () => {
+                document.getElementById('reviewForm').style.display = 'block';
+            });
+
+            document.getElementById('submitReview').addEventListener('click', async () => {
+                const name = document.getElementById('reviewName').value;
+                const reviewText = document.getElementById('reviewText').value;
+
+                if (name && reviewText) {
+                    await fetch('https://your-backend.onrender.com/reviews', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({ name, review: reviewText })
+                    });
+                    alert('Review posted!');
+                    document.getElementById('reviewForm').style.display = 'none';
+                }
             });
         });
     </script>
@@ -151,24 +169,26 @@
     </nav>
     <section id="services" class="active">
         <h3>Our Services</h3>
-        <p>Select your service and book an appointment easily.</p>
         <button id="bookNowButton" class="button">Book Now</button>
+        <div id="bookingForm" class="booking-form">
+            <input type="text" id="bookingName" placeholder="Your Name" required>
+            <select id="bookingService">
+                <option value="Entry Wash">Entry Wash</option>
+                <option value="Medium Wash">Medium Wash</option>
+                <option value="Advanced Wash">Advanced Wash</option>
+                <option value="Showroom Wash">Showroom Wash</option>
+            </select>
+            <button id="submitBooking" class="button">Confirm Booking</button>
+        </div>
     </section>
-    <div class="overlay" id="overlay"></div>
-    <div class="booking-form" id="bookingForm">
-        <h3>Book an Appointment</h3>
-        <input type="text" id="name" placeholder="Full Name" required>
-        <input type="tel" id="phone" placeholder="Phone Number" required>
-        <input type="email" id="email" placeholder="Email Address" required>
-        <input type="text" id="car_details" placeholder="Car Make, Model, Year, Color" required>
-        <input type="date" id="date" required>
-        <input type="time" id="time" required>
-        <button type="submit" class="button">Submit Booking</button>
-        <button id="closeBooking" class="button">Close</button>
-    </div>
-    <footer>
-        <p>&copy; 2025 ICONIC MOBILE DETAILS. All Rights Reserved.</p>
-        <p>Contact: (000) 000-0000 | email@example.com</p>
-    </footer>
+    <section id="reviews">
+        <h3>Reviews</h3>
+        <button id="reviewButton" class="button">Leave a Review</button>
+        <div id="reviewForm" class="review-form">
+            <input type="text" id="reviewName" placeholder="Your Name" required>
+            <textarea id="reviewText" placeholder="Write your review here..." rows="4" required></textarea>
+            <button id="submitReview" class="button">Post Review</button>
+        </div>
+    </section>
 </body>
 </html>
