--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
         .button:hover {
             background-color: #ffa500;
         }
-        .review-form, .booking-form {
+        .review-form {
             display: none;
             background: #222;
             padding: 1rem;
             border-radius: 8px;
             margin-top: 1rem;
         }
-        .review, .booking {
+        .review {
             background: #222;
             padding: 1rem;
             border-radius: 8px;
@@ -103,38 +103,19 @@
             links.forEach(link => {
                 link.addEventListener('click', () => {
                     const targetId = link.getAttribute('href').replace('#', '');
+
                     sections.forEach(section => {
                         section.classList.remove('active');
                         if (section.id === targetId) {
                             section.classList.add('active');
                         }
                     });
+
                     links.forEach(l => l.classList.remove('active'));
                     link.classList.add('active');
                 });
             });
 
-            // Booking form functionality
-            document.getElementById('bookNowButton').addEventListener('click', () => {
-                document.getElementById('bookingForm').style.display = 'block';
-            });
-
-            document.getElementById('submitBooking').addEventListener('click', async () => {
-                const name = document.getElementById('bookingName').value;
-                const service = document.getElementById('bookingService').value;
-
-                if (name && service) {
-                    await fetch('https://your-backend.onrender.com/bookings', {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({ name, service })
-                    });
-                    alert('Booking confirmed!');
-                    document.getElementById('bookingForm').style.display = 'none';
-                }
-            });
-
-            // Review form functionality
             document.getElementById('reviewButton').addEventListener('click', () => {
                 document.getElementById('reviewForm').style.display = 'block';
             });
@@ -144,15 +125,35 @@
                 const reviewText = document.getElementById('reviewText').value;
 
                 if (name && reviewText) {
-                    await fetch('https://your-backend.onrender.com/reviews', {
+                    const response = await fetch('https://iconicmobiledetails-backend.onrender.com/reviews', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify({ name, review: reviewText })
                     });
-                    alert('Review posted!');
-                    document.getElementById('reviewForm').style.display = 'none';
+                    
+                    if (response.ok) {
+                        loadReviews();
+                        document.getElementById('reviewName').value = '';
+                        document.getElementById('reviewText').value = '';
+                        document.getElementById('reviewForm').style.display = 'none';
+                    }
                 }
             });
+
+            async function loadReviews() {
+                const response = await fetch('https://iconicmobiledetails-backend.onrender.com/reviews');
+                const reviews = await response.json();
+                const reviewSection = document.getElementById('reviewsList');
+                reviewSection.innerHTML = '';
+                reviews.forEach(review => {
+                    const reviewDiv = document.createElement('div');
+                    reviewDiv.classList.add('review');
+                    reviewDiv.innerHTML = `<strong>${review.name}</strong><p>${review.review}</p>`;
+                    reviewSection.appendChild(reviewDiv);
+                });
+            }
+
+            loadReviews();
         });
     </script>
 </head>
@@ -167,28 +168,15 @@
         <a href="#reviews">Reviews</a>
         <a href="#legal">Legal</a>
     </nav>
-    <section id="services" class="active">
-        <h3>Our Services</h3>
-        <button id="bookNowButton" class="button">Book Now</button>
-        <div id="bookingForm" class="booking-form">
-            <input type="text" id="bookingName" placeholder="Your Name" required>
-            <select id="bookingService">
-                <option value="Entry Wash">Entry Wash</option>
-                <option value="Medium Wash">Medium Wash</option>
-                <option value="Advanced Wash">Advanced Wash</option>
-                <option value="Showroom Wash">Showroom Wash</option>
-            </select>
-            <button id="submitBooking" class="button">Confirm Booking</button>
-        </div>
-    </section>
-    <section id="reviews">
+    <section id="reviews" class="active">
         <h3>Reviews</h3>
-        <button id="reviewButton" class="button">Leave a Review</button>
+        <button id="reviewButton" class="button">Leave us a Review</button>
         <div id="reviewForm" class="review-form">
             <input type="text" id="reviewName" placeholder="Your Name" required>
             <textarea id="reviewText" placeholder="Write your review here..." rows="4" required></textarea>
             <button id="submitReview" class="button">Post Review</button>
         </div>
+        <div id="reviewsList"></div>
     </section>
 </body>
 </html>
