--- a/index.html
+++ b/index.html
@@ -168,7 +168,11 @@
         <a href="#reviews">Reviews</a>
         <a href="#legal">Legal</a>
     </nav>
-    <section id="reviews" class="active">
+    <section id="services" class="active">
+        <h3>Our Services</h3>
+        <button class="button" onclick="window.location.href='/book'">Book Now</button>
+    </section>
+    <section id="reviews">
         <h3>Reviews</h3>
         <button id="reviewButton" class="button">Leave us a Review</button>
         <div id="reviewForm" class="review-form">
