--- a/index.html
+++ b/index.html
@@ -80,81 +80,36 @@
         .button:hover {
             background-color: #ffa500;
         }
-        .review-form {
-            display: none;
+        .form-container {
             background: #222;
             padding: 1rem;
             border-radius: 8px;
             margin-top: 1rem;
-        }
-        .review {
-            background: #222;
-            padding: 1rem;
-            border-radius: 8px;
-            margin-top: 1rem;
-            border: 1px solid #fff;
         }
     </style>
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const links = document.querySelectorAll('nav a');
-            const sections = document.querySelectorAll('section');
+        async function submitBooking() {
+            const name = document.getElementById('bookingName').value;
+            const phone = document.getElementById('bookingPhone').value;
+            const email = document.getElementById('bookingEmail').value;
+            const service = document.getElementById('bookingService').value;
+            const date = document.getElementById('bookingDate').value;
+            const time = document.getElementById('bookingTime').value;
+            const location = document.getElementById('bookingLocation').value;
 
-            links.forEach(link => {
-                link.addEventListener('click', () => {
-                    const targetId = link.getAttribute('href').replace('#', '');
-
-                    sections.forEach(section => {
-                        section.classList.remove('active');
-                        if (section.id === targetId) {
-                            section.classList.add('active');
-                        }
-                    });
-
-                    links.forEach(l => l.classList.remove('active'));
-                    link.classList.add('active');
-                });
+            const response = await fetch('https://iconicmobiledetails-backend.onrender.com/bookings', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ name, phone, email, service, date, time, location })
             });
-
-            document.getElementById('reviewButton').addEventListener('click', () => {
-                document.getElementById('reviewForm').style.display = 'block';
-            });
-
-            document.getElementById('submitReview').addEventListener('click', async () => {
-                const name = document.getElementById('reviewName').value;
-                const reviewText = document.getElementById('reviewText').value;
-
-                if (name && reviewText) {
-                    const response = await fetch('https://iconicmobiledetails-backend.onrender.com/reviews', {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({ name, review: reviewText })
-                    });
-                    
-                    if (response.ok) {
-                        loadReviews();
-                        document.getElementById('reviewName').value = '';
-                        document.getElementById('reviewText').value = '';
-                        document.getElementById('reviewForm').style.display = 'none';
-                    }
-                }
-            });
-
-            async function loadReviews() {
-                const response = await fetch('https://iconicmobiledetails-backend.onrender.com/reviews');
-                const reviews = await response.json();
-                const reviewSection = document.getElementById('reviewsList');
-                reviewSection.innerHTML = '';
-                reviews.forEach(review => {
-                    const reviewDiv = document.createElement('div');
-                    reviewDiv.classList.add('review');
-                    reviewDiv.innerHTML = `<strong>${review.name}</strong><p>${review.review}</p>`;
-                    reviewSection.appendChild(reviewDiv);
-                });
+            
+            if (response.ok) {
+                alert('Booking request submitted! You will receive confirmation shortly.');
+                document.getElementById('bookingForm').reset();
+            } else {
+                alert('Error submitting booking. Please try again.');
             }
-
-            loadReviews();
-        });
+        }
     </script>
 </head>
 <body>
@@ -170,17 +125,37 @@
     </nav>
     <section id="services" class="active">
         <h3>Our Services</h3>
-        <button class="button" onclick="window.location.href='/book'">Book Now</button>
+        <button class="button" onclick="document.getElementById('bookingSection').classList.add('active');">Book Now</button>
     </section>
     <section id="reviews">
-        <h3>Reviews</h3>
-        <button id="reviewButton" class="button">Leave us a Review</button>
-        <div id="reviewForm" class="review-form">
-            <input type="text" id="reviewName" placeholder="Your Name" required>
-            <textarea id="reviewText" placeholder="Write your review here..." rows="4" required></textarea>
-            <button id="submitReview" class="button">Post Review</button>
+        <h3>Customer Reviews</h3>
+        <div id="reviewsContainer"></div>
+        <div class="form-container">
+            <h4>Leave a Review</h4>
+            <input type="text" id="reviewName" placeholder="Your Name" required><br>
+            <textarea id="reviewText" placeholder="Your Review" required></textarea><br>
+            <button class="button" onclick="submitReview()">Submit Review</button>
         </div>
-        <div id="reviewsList"></div>
+    </section>
+    <section id="bookingSection">
+        <h3>Book Your Detailing</h3>
+        <div class="form-container">
+            <form id="bookingForm">
+                <input type="text" id="bookingName" placeholder="Your Name" required><br>
+                <input type="tel" id="bookingPhone" placeholder="Your Phone Number" required><br>
+                <input type="email" id="bookingEmail" placeholder="Your Email" required><br>
+                <select id="bookingService">
+                    <option value="Entry Wash">Entry Wash - $100</option>
+                    <option value="Medium Wash">Medium Wash - $200</option>
+                    <option value="Advanced Wash">Advanced Wash - $400</option>
+                    <option value="Showroom Wash">Showroom Wash - $1000</option>
+                </select><br>
+                <input type="date" id="bookingDate" required><br>
+                <input type="time" id="bookingTime" required><br>
+                <input type="text" id="bookingLocation" placeholder="Meeting Location" required><br>
+                <button type="button" class="button" onclick="submitBooking()">Submit Booking</button>
+            </form>
+        </div>
     </section>
 </body>
 </html>
