--- a/index.html
+++ b/index.html
@@ -1,196 +1,312 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ICONIC MOBILE DETAILS - Mobile Car Detailing</title>
-    <style>
-        body {
-            font-family: 'Avenir Next LT Pro', Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #000;
-            color: #fff;
-        }
-        header {
-            background-color: #000;
-            color: #fff;
-            padding: 2rem 0;
-            text-align: center;
-        }
-        header img {
-            width: 360px;
-            margin: 0 auto;
-            display: block;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #111;
-            padding: 1rem 0;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 1.5rem;
-            font-size: 1.2rem;
-            cursor: pointer;
-        }
-        nav a:hover {
-            text-decoration: underline;
-            color: #ffcc00;
-        }
-        nav a.active {
-            font-weight: bold;
-            text-decoration: underline;
-            color: #ffcc00;
-        }
-        section {
-            display: none;
-            max-width: 900px;
-            margin: 2rem auto;
-            background: #111;
-            padding: 2.5rem;
-            border-radius: 8px;
-            border: 2px solid #fff;
-            box-shadow: 0 3px 6px rgba(255, 255, 255, 0.1);
-        }
-        section.active {
-            display: block;
-        }
-        section h3 {
-            margin-top: 0;
-            font-size: 2rem;
-            color: #fff;
-        }
-        .button {
-            display: inline-block;
-            background-color: #ffcc00;
-            color: #000;
-            padding: 0.8rem 1.5rem;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 5px;
-            margin-top: 1rem;
-            cursor: pointer;
-        }
-        .button:hover {
-            background-color: #ffa500;
-        }
-        .form-container {
-            background: #222;
-            padding: 1rem;
-            border-radius: 8px;
-            margin-top: 1rem;
-        }
-        .review-list {
-            margin-top: 1rem;
-            padding: 1rem;
-            background-color: #222;
-            border-radius: 8px;
-        }
-    </style>
-    <script>
-        async function submitBooking(event) {
-            event.preventDefault();
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ICONIC MOBILE DETAILS - Mobile Car Detailing</title>
+  <style>
+    body {
+      font-family: 'Avenir Next LT Pro', Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #000;
+      color: #fff;
+    }
+    header {
+      background-color: #000;
+      color: #fff;
+      padding: 2rem 0;
+      text-align: center;
+    }
+    header img {
+      width: 360px;
+      margin: 0 auto;
+      display: block;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      background-color: #111;
+      padding: 1rem 0;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 1.5rem;
+      font-size: 1.2rem;
+      cursor: pointer;
+    }
+    nav a:hover {
+      text-decoration: underline;
+      color: #ffcc00;
+    }
+    nav a.active {
+      font-weight: bold;
+      text-decoration: underline;
+      color: #ffcc00;
+    }
+    section {
+      display: none;
+      max-width: 900px;
+      margin: 2rem auto;
+      background: #111;
+      padding: 2.5rem;
+      border-radius: 8px;
+      border: 2px solid #fff;
+      box-shadow: 0 3px 6px rgba(255, 255, 255, 0.1);
+    }
+    section.active {
+      display: block;
+    }
+    section h3 {
+      margin-top: 0;
+      font-size: 2rem;
+      color: #fff;
+    }
+    .button {
+      display: inline-block;
+      background-color: #ffcc00;
+      color: #000;
+      padding: 0.8rem 1.5rem;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 5px;
+      margin-top: 1rem;
+      cursor: pointer;
+    }
+    .button:hover {
+      background-color: #ffa500;
+    }
+    .review-form {
+      display: none;
+      background: #222;
+      padding: 1rem;
+      border-radius: 8px;
+      margin-top: 1rem;
+    }
+    .review,
+    .booking {
+      background: #222;
+      padding: 1rem;
+      border-radius: 8px;
+      margin-top: 1rem;
+      border: 1px solid #fff;
+    }
+    /* Simple styling for form inputs */
+    input, select, textarea {
+      width: 100%;
+      padding: 0.5rem;
+      margin: 0.5rem 0;
+      border: 1px solid #555;
+      border-radius: 4px;
+      background: #333;
+      color: #fff;
+    }
+    select:invalid {
+      color: #aaa; /* Gray text if the default placeholder option is selected */
+    }
+  </style>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const links = document.querySelectorAll('nav a');
+      const sections = document.querySelectorAll('section');
 
-            const name = document.getElementById('bookingName').value;
-            const phone = document.getElementById('bookingPhone').value;
-            const email = document.getElementById('bookingEmail').value;
-            const service = document.getElementById('bookingService').value;
-            const date = document.getElementById('bookingDate').value;
-            const time = document.getElementById('bookingTime').value;
-            const location = document.getElementById('bookingLocation').value;
-
-            try {
-                const response = await fetch('https://iconicmobiledetails-backend.onrender.com/bookings', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ name, phone, email, service, date, time, location })
-                });
-
-                if (!response.ok) {
-                    throw new Error('Failed to submit booking');
-                }
-
-                alert('Booking request submitted! You will receive confirmation shortly.');
-                document.getElementById('bookingForm').reset();
-            } catch (error) {
-                alert('Error submitting booking. Please try again.');
-                console.error('Booking Error:', error);
+      // Navigation switching between sections
+      links.forEach(link => {
+        link.addEventListener('click', () => {
+          const targetId = link.getAttribute('href').replace('#', '');
+          sections.forEach(section => {
+            section.classList.remove('active');
+            if (section.id === targetId) {
+              section.classList.add('active');
             }
-        }
-
-        document.addEventListener('DOMContentLoaded', () => {
-            const links = document.querySelectorAll('nav a');
-            const sections = document.querySelectorAll('section');
-
-            links.forEach(link => {
-                link.addEventListener('click', () => {
-                    const targetId = link.getAttribute('href').replace('#', '');
-
-                    sections.forEach(section => {
-                        section.classList.remove('active');
-                        if (section.id === targetId) {
-                            section.classList.add('active');
-                        }
-                    });
-
-                    links.forEach(l => l.classList.remove('active'));
-                    link.classList.add('active');
-                });
-            });
-
-            if (sections.length > 0) {
-                sections[0].classList.add('active');
-            }
+          });
+          links.forEach(l => l.classList.remove('active'));
+          link.classList.add('active');
         });
-    </script>
+      });
+
+      // Reviews functionality
+      document.getElementById('reviewButton').addEventListener('click', () => {
+        document.getElementById('reviewForm').style.display = 'block';
+      });
+
+      document.getElementById('submitReview').addEventListener('click', async () => {
+        const name = document.getElementById('reviewName').value;
+        const reviewText = document.getElementById('reviewText').value;
+        if (name && reviewText) {
+          const response = await fetch('https://iconicmobiledetails-backend.onrender.com/reviews', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ name, review: reviewText })
+          });
+          if (response.ok) {
+            loadReviews();
+            document.getElementById('reviewName').value = '';
+            document.getElementById('reviewText').value = '';
+            document.getElementById('reviewForm').style.display = 'none';
+          }
+        }
+      });
+
+      async function loadReviews() {
+        const response = await fetch('https://iconicmobiledetails-backend.onrender.com/reviews');
+        const reviews = await response.json();
+        const reviewSection = document.getElementById('reviewsList');
+        reviewSection.innerHTML = '';
+        reviews.forEach(review => {
+          const reviewDiv = document.createElement('div');
+          reviewDiv.classList.add('review');
+          reviewDiv.innerHTML = `<strong>${review.name}</strong><p>${review.review}</p>`;
+          reviewSection.appendChild(reviewDiv);
+        });
+      }
+      loadReviews();
+
+      // Booking functionality
+      document.getElementById('bookingButton').addEventListener('click', () => {
+        const bookingForm = document.getElementById('bookingForm');
+        bookingForm.style.display = bookingForm.style.display === 'block' ? 'none' : 'block';
+      });
+
+      document.getElementById('submitBooking').addEventListener('click', async () => {
+        // Gather booking data
+        const serviceType = document.getElementById('serviceType').value;
+        const vehicleType = document.getElementById('vehicleType').value;
+        const dirtyLevel = document.getElementById('dirtyLevel').value;
+        const vehicleColor = document.getElementById('vehicleColor').value;
+        const make = document.getElementById('make').value;
+        const model = document.getElementById('model').value;
+        const location = document.getElementById('location').value;
+        const customerName = document.getElementById('customerName').value;
+        const phone = document.getElementById('phone').value;
+        const email = document.getElementById('email').value;
+        const cleaningDateValue = document.getElementById('cleaningDate').value;
+        const cleaningTime = document.getElementById('cleaningTime').value;
+        const comments = document.getElementById('comments').value;
+
+        // Check that all required fields are filled
+        if (serviceType && vehicleType && dirtyLevel && vehicleColor && make && model && location &&
+            customerName && phone && email && cleaningDateValue && cleaningTime) {
+          const cleaningDate = new Date(cleaningDateValue);
+          const now = new Date();
+          let lateNoticeFee = 0;
+          // Calculate the difference in days between the selected cleaning date and now
+          const diffTime = cleaningDate.getTime() - now.getTime();
+          const diffDays = diffTime / (1000 * 3600 * 24);
+          if (diffDays < 2) {
+            lateNoticeFee = 50;
+            alert("Note: Your booking is scheduled within 2 days. A late notice fee of $50 will be applied.");
+          }
+          const bookingData = {
+            serviceType,
+            vehicleType,
+            dirtyLevel,
+            vehicleColor,
+            make,
+            model,
+            location,
+            customerName,
+            phone,
+            email,
+            cleaningDate: cleaningDateValue,
+            cleaningTime,
+            comments,
+            lateNoticeFee
+          };
+
+          // Send booking data to the backend
+          const response = await fetch('https://iconicmobiledetails-backend.onrender.com/bookings', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(bookingData)
+          });
+          
+          if (response.ok) {
+            alert("Booking submitted successfully! You and the admin will receive a confirmation via text and email shortly.");
+            // Clear form fields
+            document.getElementById('serviceType').value = '';
+            document.getElementById('vehicleType').value = '';
+            document.getElementById('dirtyLevel').value = '';
+            document.getElementById('vehicleColor').value = '';
+            document.getElementById('make').value = '';
+            document.getElementById('model').value = '';
+            document.getElementById('location').value = '';
+            document.getElementById('customerName').value = '';
+            document.getElementById('phone').value = '';
+            document.getElementById('email').value = '';
+            document.getElementById('cleaningDate').value = '';
+            document.getElementById('cleaningTime').value = '';
+            document.getElementById('comments').value = '';
+            document.getElementById('bookingForm').style.display = 'none';
+          } else {
+            alert("There was an error submitting your booking. Please try again later.");
+          }
+        } else {
+          alert("Please fill in all required fields.");
+        }
+      });
+    });
+  </script>
 </head>
 <body>
-    <header>
-        <img src="logo.png" alt="ICONIC DETAILS Logo">
-    </header>
-    <nav>
-        <a href="#services">Services</a>
-        <a href="#about">About</a>
-        <a href="#expectations">What to Expect</a>
-        <a href="#reviews">Reviews</a>
-        <a href="#legal">Legal</a>
-    </nav>
-    <section id="services">
-        <h3>Our Services</h3>
-        <button class="button" onclick="document.getElementById('bookingSection').classList.add('active');">Book Now</button>
-    </section>
-    <section id="bookingSection">
-        <h3>Book Your Detailing</h3>
-        <div class="form-container">
-            <form id="bookingForm" onsubmit="submitBooking(event)">
-                <input type="text" id="bookingName" placeholder="Your Name" required><br>
-                <input type="tel" id="bookingPhone" placeholder="Your Phone Number" required><br>
-                <input type="email" id="bookingEmail" placeholder="Your Email" required><br>
-                <select id="bookingService">
-                    <option value="Entry Wash">Entry Wash - $100</option>
-                    <option value="Medium Wash">Medium Wash - $200</option>
-                    <option value="Advanced Wash">Advanced Wash - $400</option>
-                    <option value="Showroom Wash">Showroom Wash - $1000</option>
-                </select><br>
-                <input type="date" id="bookingDate" required><br>
-                <input type="time" id="bookingTime" required><br>
-                <input type="text" id="bookingLocation" placeholder="Meeting Location" required><br>
-                <button type="submit" class="button">Submit Booking</button>
-            </form>
-        </div>
-    </section>
-    <section id="reviews">
-        <h3>Reviews</h3>
-        <p>At ICONIC MOBILE DETAILS, we believe that reviews are the cornerstone of any successful business. They provide us with invaluable feedback and help future customers make informed decisions. Your opinion matters, and we strive to earn 5-star reviews from every customer we serve. If you are not satisfied with your service, let us know! We want to continuously improve the work we do to better serve Kentucky.</p>
-        <div class="review-list">
-            <!-- Reviews will go here -->
-        </div>
-    </section>
+  <header>
+    <img src="logo.png" alt="ICONIC DETAILS Logo" />
+  </header>
+  <nav>
+    <a href="#services" class="active">Services</a>
+    <a href="#about">About</a>
+    <a href="#expectations">What to Expect</a>
+    <a href="#reviews">Reviews</a>
+    <a href="#legal">Legal</a>
+  </nav>
+  <!-- Services Section with Booking Functionality -->
+  <section id="services" class="active">
+    <h3>Our Services</h3>
+    <!-- Services details can be added here -->
+    <button id="bookingButton" class="button">Book Now</button>
+    <div id="bookingForm" class="review-form">
+      <select id="serviceType" required>
+        <option value="" disabled selected>Select Your Service</option>
+        <option value="Mini Interior - $50">Mini Interior - $50</option>
+        <option value="Full Interior - $100">Full Interior - $100</option>
+        <option value="Mini Exterior - $50">Mini Exterior - $50</option>
+        <option value="Full Exterior - $100">Full Exterior - $100</option>
+        <option value="Full Detail - $150">Full Detail - $150</option>
+        <!-- Add or adjust these options as needed -->
+      </select>
+
+      <input type="text" id="vehicleType" placeholder="Vehicle Type (e.g., Sedan, SUV)" required />
+      <input type="text" id="dirtyLevel" placeholder="Dirty Level (e.g., Light, Moderate, Heavy)" required />
+      <input type="text" id="vehicleColor" placeholder="Vehicle Color" required />
+      <input type="text" id="make" placeholder="Make" required />
+      <input type="text" id="model" placeholder="Model" required />
+      <input type="text" id="location" placeholder="Location" required />
+      <input type="text" id="customerName" placeholder="Your Name" required />
+      <input type="tel" id="phone" placeholder="Phone Number" required />
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="date" id="cleaningDate" required />
+      <input type="time" id="cleaningTime" required />
+      <textarea id="comments" placeholder="Any additional comments..." rows="4"></textarea>
+      <button id="submitBooking" class="button">Submit Booking</button>
+    </div>
+  </section>
+
+  <!-- Reviews Section -->
+  <section id="reviews">
+    <h3>Reviews</h3>
+    <button id="reviewButton" class="button">Leave us a Review</button>
+    <div id="reviewForm" class="review-form">
+      <input type="text" id="reviewName" placeholder="Your Name" required />
+      <textarea id="reviewText" placeholder="Write your review here..." rows="4" required></textarea>
+      <button id="submitReview" class="button">Post Review</button>
+    </div>
+    <div id="reviewsList"></div>
+  </section>
+
+  <!-- Additional sections: About, What to Expect, Legal, etc. -->
 </body>
 </html>
