--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ICONIC MOBILE DETAILS - Mobile Car Detailing Service</title>
   <style>
@@ -108,6 +108,12 @@
     select:invalid {
       color: #aaa;
     }
+    /* Style date and time picker icons to match the yellow/orange theme */
+    input[type="date"]::-webkit-calendar-picker-indicator,
+    input[type="time"]::-webkit-calendar-picker-indicator {
+      filter: invert(57%) sepia(100%) saturate(415%) hue-rotate(1deg) brightness(105%) contrast(101%);
+      cursor: pointer;
+    }
   </style>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
@@ -172,10 +178,17 @@
         bookingForm.style.display = bookingForm.style.display === 'block' ? 'none' : 'block';
       });
 
+      // Auto-blur on change for date and time fields to close the selection screen
+      document.getElementById('cleaningDate').addEventListener('change', function() {
+        this.blur();
+      });
+      document.getElementById('cleaningTime').addEventListener('change', function() {
+        this.blur();
+      });
+
       document.getElementById('submitBooking').addEventListener('click', async () => {
         // Gather booking data from the form
         const serviceType   = document.getElementById('serviceType').value;
-        const vehicleType   = document.getElementById('vehicleType').value;
         const dirtyLevel    = document.getElementById('dirtyLevel').value;
         const vehicleColor  = document.getElementById('vehicleColor').value;
         const make          = document.getElementById('make').value;
@@ -188,9 +201,9 @@
         const cleaningTime  = document.getElementById('cleaningTime').value;
         const comments      = document.getElementById('comments').value;
 
-        // Ensure all required fields are filled
+        // Ensure all required fields are filled (vehicle type removed)
         if (
-          serviceType && vehicleType && dirtyLevel && vehicleColor && make &&
+          serviceType && dirtyLevel && vehicleColor && make &&
           model && location && customerName && phone && email &&
           cleaningDate && cleaningTime
         ) {
@@ -207,7 +220,6 @@
           // Combine the service and car details into one field
           const carDetails = 
             `Service: ${serviceType}\n` +
-            `Vehicle Type: ${vehicleType}\n` +
             `Dirty Level: ${dirtyLevel}\n` +
             `Color: ${vehicleColor}\n` +
             `Make: ${make}\n` +
@@ -237,7 +249,6 @@
             alert("Booking submitted successfully! You and the admin will receive a confirmation via text and email shortly.");
             // Clear form fields
             document.getElementById('serviceType').value = '';
-            document.getElementById('vehicleType').value = '';
             document.getElementById('dirtyLevel').value = '';
             document.getElementById('vehicleColor').value = '';
             document.getElementById('make').value = '';
@@ -262,7 +273,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="ICONIC DETAILS Logo" />
+    <img src="logo.png" alt="ICONIC DETAILS Logo">
   </header>
 
   <nav>
@@ -277,7 +288,6 @@
   <section id="services" class="active">
     <h3>Our Services</h3>
     <!-- Add details or images about your services here -->
-
     <button id="bookingButton" class="button">Book Now</button>
     <div id="bookingForm" class="review-form">
       <select id="serviceType" required>
@@ -288,17 +298,16 @@
         <option value="Full Exterior - $100">Full Exterior - $100</option>
         <option value="Full Detail - $150">Full Detail - $150</option>
       </select>
-      <input type="text" id="vehicleType" placeholder="Vehicle Type (e.g., Sedan, SUV)" required />
-      <input type="text" id="dirtyLevel" placeholder="Dirty Level (e.g., Light, Moderate, Heavy)" required />
-      <input type="text" id="vehicleColor" placeholder="Vehicle Color" required />
-      <input type="text" id="make" placeholder="Make" required />
-      <input type="text" id="model" placeholder="Model" required />
-      <input type="text" id="location" placeholder="Location" required />
-      <input type="text" id="customerName" placeholder="Your Name" required />
-      <input type="tel" id="phone" placeholder="Phone Number" required />
-      <input type="email" id="email" placeholder="Email" required />
-      <input type="date" id="cleaningDate" required />
-      <input type="time" id="cleaningTime" required />
+      <input type="text" id="dirtyLevel" placeholder="Dirty Level (e.g., Light, Moderate, Heavy)" required>
+      <input type="text" id="vehicleColor" placeholder="Vehicle Color" required>
+      <input type="text" id="make" placeholder="Make" required>
+      <input type="text" id="model" placeholder="Model" required>
+      <input type="text" id="location" placeholder="Location" required>
+      <input type="text" id="customerName" placeholder="Your Name" required>
+      <input type="tel" id="phone" placeholder="Phone Number" required>
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="date" id="cleaningDate" required>
+      <input type="time" id="cleaningTime" required min="06:00" max="18:00">
       <textarea id="comments" placeholder="Any additional comments..." rows="4"></textarea>
       <button id="submitBooking" class="button">Submit Booking</button>
     </div>
@@ -309,7 +318,7 @@
     <h3>Reviews</h3>
     <button id="reviewButton" class="button">Leave us a Review</button>
     <div id="reviewForm" class="review-form">
-      <input type="text" id="reviewName" placeholder="Your Name" required />
+      <input type="text" id="reviewName" placeholder="Your Name" required>
       <textarea id="reviewText" placeholder="Write your review here..." rows="4" required></textarea>
       <button id="submitReview" class="button">Post Review</button>
     </div>
